--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body{
-    background: url("src\assets\fundo.jpg") no-repeat center center fixed;
+    background: url("src/assets/fundo.jpg") no-repeat center center fixed;
     background-size: cover; /*Css padrão*/
     -webkit-background-size: cover; /*Css safari e chrome*/
     -moz-background-size: cover; /*Css firefox*/
