--- a/src/app/components/pokedex/pokedex.component.html
+++ b/src/app/components/pokedex/pokedex.component.html
@@ -1,24 +1,25 @@
 <div class="container">
     <div class="row align-items-center">
-    <div class="mx-auto text-center">
-    <img class="slideInDown center"
-    src="assets/poke-logo.png"
-    alt="Pokemon">
-    </div>
-    </div>
-    <div class="row align-items-center">
-        <div class="mx-auto text-center">
-        <input type="text" [(ngModel)]="pesquisa"> 
+        <div class="text-center">
+            <img class="fadeInDown" style="width: 30rem;" src="assets/poke-logo.png" alt="Pokemon">
         </div>
+        <div class="col text-center">
+
+            <img class="img-input fadeInLeft"
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{data | date:'m'}}.png"
+                alt="{{pokemon.name}}">
+
+            <input class="form-control fadeInRight sombra" style="width: 300px; display: inline;"  type="text" [(ngModel)]="pesquisa" placeholder="Pesquisar">
         </div>
+    </div>
     <div class="row">
-        <div class="col-4 mt-5" *ngFor="let i = index; let pokemon of pokemons |filter:pesquisa " >
+        <div class="col-4 mt-3" *ngFor="let pokemon of poke |filter:pesquisa ">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top"
-                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{i+1}}.png"
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokemon.id}}.png"
                     alt="{{pokemon.name}}">
                 <div class="card-body">
-                    <p class="card-text">{{pokemon.name}}</p>
+                    <p class="card-text">{{pokemon.name}}</p><app-modal-detalhe-pokemon id="{{pokemon.id}}"  routerLink="pokemon/{{pokemon.id}}"></app-modal-detalhe-pokemon>
                 </div>
             </div>
         </div>
