--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.css
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.css
@@ -74,3 +74,25 @@
       background-color: rgb(44, 10, 5);
   }
 
+  .texto{
+      background-color: rgb(24, 23, 23);
+      color: white;
+      border-bottom-left-radius: 50px;
+      border-top-left-radius: 50px;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px; 
+      padding-right:20px;
+      margin-left:45px;
+  }
+
+  .poke{
+    background-image: url('https://img.icons8.com/fluency/48/000000/pokeball.png');
+    background-repeat: no-repeat;
+  }
+  .poke:hover {
+    /* <img src="https://img.icons8.com/color/48/000000/open-pokeball--v2.png"/> */
+    /* content:"https://img.icons8.com/color/48/000000/open-pokeball--v2.png"; */
+    background-image: url('https://img.icons8.com/color/48/000000/open-pokeball--v2.png');
+    background-repeat: no-repeat;
+  }
+
