--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
@@ -2,9 +2,7 @@
   <ng-container *ngIf="P">
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">{{P.name}}</h4>
-      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
+      <i type="button" class="bi bi-x-lg btn btn-danger btn-sm"(click)="d('Cross click')" ></i>
     </div>
     <div class="modal-body">
       <div class="row">
@@ -58,6 +56,9 @@
     </div>
   </ng-container>
 </ng-template>
+<div class="d-flex justify-content-center">
 
-<button  class="btn btn-sm btn-dark"(click)="open(content)">Detalhes</button>
+ <div (click)="open(content)"  type="button" class="poke texto"> <p class="mt-2 texto">Detalhes</p></div>
+</div>
+
 
