--- a/src/app/components/pokedex/pokedex.component.css
+++ b/src/app/components/pokedex/pokedex.component.css
@@ -2,7 +2,12 @@
     background: radial-gradient(circle, rgba(255,187,150,1) 0%, rgba(213,18,18,1) 100%);
     border: solid 5px ;
 
+
 }
+
+/* img .card-img-top{
+    width: 500px;
+} */
 
 .card-body{
     background-color: silver;
