--- a/src/app/components/pokedex/pokedex.component.html
+++ b/src/app/components/pokedex/pokedex.component.html
@@ -14,9 +14,18 @@
     </div>
     <div class="row">
         <div class="col-4 mt-3" *ngFor="let pokemon of poke |filter:pesquisa ">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top"
-                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokemon.id}}.png"
+            <div class="card" style="width: 15rem;">
+                <img *ngIf="10>pokemon.id" class="card-img-top"
+                    src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/00{{pokemon.id}}.png"
+                    
+                    alt="{{pokemon.name}}">
+                <img *ngIf="pokemon.id>=10 && 100 > pokemon.id" class="card-img-top"
+                    src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/0{{pokemon.id}}.png"
+                    
+                    alt="{{pokemon.name}}">
+                <img *ngIf="pokemon.id>=100" class="card-img-top"
+                    src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/{{pokemon.id}}.png"
+                    
                     alt="{{pokemon.name}}">
                 <div class="card-body">
                     <p class="card-text">{{pokemon.name}}</p> <app-modal-detalhe-pokemon  routerLink="/pokemon/{{pokemon.id}}" [P]="pokemon" ></app-modal-detalhe-pokemon>                                                                            
