--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
@@ -1,20 +1,20 @@
 <ng-template #content let-c="close" let-d="dismiss">
-  <ng-container  *ngIf="pokemon[0]">
+  <ng-container  *ngIf="pokemonId">
     <div class="modal-header bg-dark text-white">
-      <h4 class="modal-title" id="modal-basic-title">{{pokemon[0].name}}</h4>
-      <i type="button" class="bi bi-x-lg btn btn-danger btn-sm"(click)="fechar()" ></i>
+      <h4 class="modal-title" id="modal-basic-title">{{pokemonId.name}}</h4>
+      <i type="button" class="bi bi-x-lg btn btn-danger btn-sm"  (click)="fechar()" ></i>
     </div>
     <div class="modal-body">
       <div class="row">
       <div class="col-9" style="width: 16rem;">
-        <img class="card-img-top"
+        <img class="card-img-top" style="width: 16rem;"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/{{pokemonId.id}}.svg"
-            alt="{{pokemon[0].name}}">
+            alt="{{pokemonId.name}}">
           </div>
           <div class="col">
             <table class="table">
               <tbody>
-                <tr *ngFor= "let st of pokemon[0].stats">
+                <tr *ngFor= "let st of pokemonId.stats">
                       <td>{{st.base_stat}} - {{st.stat.name}}</td>
                 </tr>
             </tbody>
@@ -26,7 +26,7 @@
           <div  class="row justify-content-between">
             <label>Tipo</label>
            <div class="col-2">
-             <ng-container *ngFor= "let st of pokemon[0].types">
+             <ng-container *ngFor= "let st of pokemonId.types">
            <p class="tipo" [ngClass]="{
           
           'poison' : st.type.name == 'poison',
@@ -52,21 +52,17 @@
         </ng-container>
           </div>
           <div class="col-10">
-            <!-- <div class="d-flex justify-content-end"> -->
-            <app-grafico-pokemon [PokeGrafico]="P" [PokeGraficoId]="PokeGraficoId"></app-grafico-pokemon>
+            <app-grafico-pokemon [PokeGrafico]="PokeGrafico" [PokeGraficoId]="PokeGraficoId"></app-grafico-pokemon>
           </div>
-          <!-- </div> -->
       </div>
     </div>
     <div style="border-top: 1px solid #dee2e6"></div>
     <div class="d-flex justify-content-between m-3">
-      <!-- <div class="row justify-content-between"> -->
       <div class="">
-      <button type="button" class="btn btn-dark" (click)="anterior()">Anterior</button>
+      <button type="button" class="btn btn-dark" (click)="anterior()" routerLink="/pokemon/{{idControle - 1}}" >Anterior</button>
     </div>
       <div class="">
-      <button type="button" class="btn btn-dark" (click)="proximo()">Proximo</button>
-    <!-- </div> -->
+      <button type="button" class="btn btn-dark" (click)="proximo()" routerLink="/pokemon/{{idControle + 1}}">Proximo</button>
     </div>
     </div>
   </ng-container>
