--- a/src/app/components/pokedex/pokedex.component.html
+++ b/src/app/components/pokedex/pokedex.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row align-items-center">
+    <div class="row">
         <div class="text-center">
             <img class="fadeInDown" style="width: 30rem;" src="assets/poke-logo.png" alt="Pokemon">
         </div>
@@ -12,9 +12,10 @@
             <input class="form-control fadeInRight sombra" style="width: 300px; display: inline;"  type="text" [(ngModel)]="pesquisa" placeholder="Pesquisar">
         </div>
     </div>
-    <div class="row">
-        <div class="col-4 mt-3" *ngFor="let pokemon of poke | filter:pesquisa ">
-            <div class="card" style="width: 15rem;">
+    <!-- <div class="container"> -->
+    <div class="row justify-content-lg-center">
+        <div class="col-sm-auto mt-3" *ngFor="let pokemon of poke | filter:pesquisa ">
+            <div class="card" style="width: 18rem;">
                 <img *ngIf="10>pokemon.id" class="card-img-top"
                     src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/00{{pokemon.id}}.png"
                     
@@ -28,10 +29,11 @@
                     
                     alt="{{pokemon.name}}">
                 <div class="card-body">
-                    <p class="card-text">{{pokemon.name}}</p> <app-modal-detalhe-pokemon  routerLink="/pokemon/{{pokemon.id}}" [P]="pokemon" [idPoke]="pokemon.id" ></app-modal-detalhe-pokemon>                                                                            
+                    <p class="card-text">{{pokemon.name}}</p> <app-modal-detalhe-pokemon  routerLink="/pokemon/{{pokemon.id}}" [idPoke]="pokemon.id" ></app-modal-detalhe-pokemon>                                                                            
                   
                 </div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
+</div>
 </div>
