--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
@@ -59,10 +59,10 @@
     <div style="border-top: 1px solid #dee2e6"></div>
     <div class="d-flex justify-content-between m-3">
       <div class="">
-      <button type="button" class="btn btn-dark" (click)="anterior()" routerLink="/pokemon/{{idControle - 1}}" >Anterior</button>
+      <button type="button" class="btn btn-dark" (click)="anterior()">Anterior</button>
     </div>
       <div class="">
-      <button type="button" class="btn btn-dark" (click)="proximo()" routerLink="/pokemon/{{idControle + 1}}">Proximo</button>
+      <button type="button" class="btn btn-dark" (click)="proximo()">Proximo</button>
     </div>
     </div>
   </ng-container>
