--- a/src/app/components/pokedex/pokedex.component.css
+++ b/src/app/components/pokedex/pokedex.component.css
@@ -1,3 +1,4 @@
+
 .card-img-top   {
     background: radial-gradient(circle, rgba(255,187,150,1) 0%, rgba(213,18,18,1) 100%);
     border: solid 5px ;
@@ -119,3 +120,27 @@
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 9px -7px rgba(0,0,0,0); 
     box-shadow: 0px 10px 13px -7px #000000, 0px 0px 9px -7px rgba(0,0,0,0);
 }
+
+.navbar-toggler{
+    background-color: #2c4494 !important;
+    margin-left: 10px;
+}
+
+
+.nav-link{
+    color: #e0e0e0 !important;
+    cursor: pointer;
+    font-family:'Doctor Soos Bold', sans-serif;
+    font-size: 20px !important;
+    border-radius: 5px;
+}
+
+.nav-item:hover{
+    background-color: #2c4494 !important;
+    border-radius: 5px; 
+}
+.bg{
+    background-color:#b68f2d ;
+    border-radius: 5px;
+}
+
