--- a/src/app/components/pokedex/pokedex.component.html
+++ b/src/app/components/pokedex/pokedex.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="text-center">
-            <img class="fadeInDown" style="width: 30rem;" src="assets/poke-logo.png" alt="Pokemon">
+        <div class="text-center" style="width: 30rem;">
+            <img class="fadeInDown" style="width: 100%;" src="assets/poke-logo.png" alt="Pokemon">
         </div>
         <div class="col text-center">
 
@@ -10,29 +10,44 @@
                 alt="{{pokemon.name}}">
 
             <input class="form-control fadeInRight sombra" style="width: 300px; display: inline;"  type="text" [(ngModel)]="pesquisa" placeholder="Pesquisar">
-            <div class="row justify-content-lg-center">
+            <div class="row mt-2">
                 <div class="col-sm-auto">
-            <button type="button" class="btn btn-sm btn-dark" (click)="alfabeticoAZ()">Alfabética (A - Z)</button>
-                   </div>
-                   <div class="col-sm-auto"> 
-            <button type="button" class="btn btn-sm btn-dark" (click)="alfabeticoZA()">Alfabética (Z - A)</button>
-                    </div>
-                    <div class="col-sm-auto">
-            <button type="button" class="btn btn-sm btn-dark" (click)="pontosAtributoMaior()">Mais Forte</button>
-                       </div>
-                       <div class="col-sm-auto"> 
-            <button type="button" class="btn btn-sm btn-dark" (click)="pontosAtributoMenor()">Mais Fraco</button>
-                            </div>
-                            <div class="col-sm-auto"> 
-            <button type="button" class="btn btn-sm btn-dark" (click)="padraoInit()">Inicial</button>
+                    <nav class="navbar navbar-expand-sm navbar-light bg">
+                        
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarText">
+                          <ul class="navbar-nav m-1" >
+                            <li class="nav-item">
+                                <a class="nav-link" id="ac1"  (click)=" padraoInit()">Inicial</a>
+                            </li>
+                            <li class="nav-item">
+                                <a  class="nav-link" id="ac2"  (click)="alfabeticoAZ()">A - Z</a>
+                            </li>
+                            <li class="nav-item">
+                                <a  class="nav-link" id="ac3"  [routerLinkActive]="['active']"  (click)="alfabeticoZA()">Z - A</a>
+                            </li>
+                            <li class="nav-item">
+                                <a  class="nav-link" id="ac4"  [routerLinkActive]="['active']" (click)="pontosAtributoMaior()">Mais Forte</a>
+                            </li>
+                            <li class="nav-item">
+                                <a  class="nav-link" id="ac5"  [routerLinkActive]="['active']" (click)="pontosAtributoMenor()">Mais Fraco</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </nav>
+              
                                 </div>
-        </div>   
+
+                                
+                            
         </div>
     </div>
 
-    <div class="row justify-content-lg-center">
-        <div class="col-sm-auto mt-3" *ngFor="let pokemon of poke | filter:pesquisa ">
-            <div class="card" style="width: 18rem;">
+    <div class="row justify-content-lg-center mt-3">
+        <div class="col m-4" *ngFor="let pokemon of poke | filter:pesquisa ">
+            <div class="card " style="width: 18rem;">
                 <img *ngIf="10>pokemon.id" class="card-img-top"
                     src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/00{{pokemon.id}}.png"
                     
@@ -46,7 +61,7 @@
                     
                     alt="{{pokemon.name}}">
                 <div class="card-body">
-                    <p class="card-text">{{pokemon.name}}</p> <app-modal-detalhe-pokemon  routerLink="/pokemon/{{pokemon.id}}" [idPoke]="pokemon.id" ></app-modal-detalhe-pokemon>                                                                            
+                    <p class="card-text">{{pokemon.name}}</p> <app-modal-detalhe-pokemon [idPoke]="pokemon.id" ></app-modal-detalhe-pokemon>                                                                            
                   
                 </div>
             </div>
