tipos-filtrando-corretamente

--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
@@ -1,18 +1,17 @@
-<ng-template #content let-c="close" let-d="dismiss">
+<ng-template  #content let-c="close" let-d="dismiss">
   <ng-container *ngIf="pokemonId">
-    <div  id="animaItem">
     <div class="modal-header bg-dark text-white">
-      <h4 class="modal-title" id="modal-basic-title">{{pokemonId.name}}</h4>
+      <h4 class="modal-title" id="modal-basic-title">{{pokemonId.name}} - {{pokemonId.id}}</h4>
       <i type="button" class="bi bi-x-lg btn btn-danger btn-sm" (click)="fechar()"></i>
     </div>
-    <div class="modal-body">
+    <div class="modal-body " id="animaItem">
       <div class="row">
-        <div class="col-9 box">
-          <img *ngIf="10>pokemonId.id" class="card-img-top"
+        <div class="col-9 box" style="width: 15rem;">
+          <img *ngIf="10>pokemonId.id" style="width: 100%;"
             src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/00{{pokemonId.id}}.png" alt="{{pokemonId.name}}">
-          <img *ngIf="pokemonId.id >=10 && 100 > pokemonId.id" class="card-img-top"
+          <img *ngIf="pokemonId.id >=10 && 100 > pokemonId.id" style="width: 100%;"
             src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/0{{pokemonId.id}}.png" alt="{{pokemonId.name}}">
-          <img *ngIf="pokemonId.id>=100" class="card-img-top"
+          <img *ngIf="pokemonId.id>=100" style="width: 100%;"
             src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/{{pokemonId.id}}.png" alt="{{pokemonId.name}}">
         </div>
         <div class="col">
@@ -56,7 +55,7 @@
           </div>
         </ng-container>
         <div>
-          <app-grafico-pokemon [PokeGrafico]="PokeGrafico" [PokeGraficoId]="PokeGraficoId"></app-grafico-pokemon>
+          <app-grafico-pokemon [PokeGrafico]="PokeGrafico"></app-grafico-pokemon>
         </div>
       </div>
     </div>
@@ -69,7 +68,6 @@
         <button type="button" class="btn btn-dark" (click)="proximo()">Proximo</button>
       </div>
     </div>
-  </div>
   </ng-container>
 </ng-template>
 <div class="d-flex justify-content-center">
