--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.css
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.css
@@ -6,14 +6,6 @@
     -o-background-size: cover; /*Css Opera*/
   }
 
-
-  /* cores tipo de pokemon */
-  .tipo{
-    text-align: center;
-    border-radius: 3px;
-    color: white;
-    padding: 6px;
-  }
   
    /* animação pokebola */
    .detalheBotao{
@@ -29,10 +21,12 @@
   .poke{
     background-image: url('https://img.icons8.com/fluency/48/000000/pokeball.png');
     background-repeat: no-repeat;
+    background-position-y: 3px;
   }
   .poke:hover {
     background-image: url('https://img.icons8.com/color/48/000000/open-pokeball--v2.png');
     background-repeat: no-repeat;
+    background-position-y: 3px;
   }
 
 
