--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
@@ -55,7 +55,7 @@
           </div>
         </ng-container>
         <div>
-          <app-grafico-pokemon [PokeGrafico]="PokeGrafico"></app-grafico-pokemon>
+          <app-grafico-pokemon [PokeGrafico]="PokeGrafico" [idPoke]="idPoke"></app-grafico-pokemon>
         </div>
       </div>
     </div>
