--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.html
@@ -51,7 +51,7 @@
           'noturno': st.type.name == 'dark',
           'fada' : st.type.name == 'fairy'
            
-          }">{{st.type.name}}</p>
+          }">{{traduzTipo(st.type.name)}}</p>
           </div>
         </ng-container>
         <div>
