--- a/src/app/components/pokedex/pokedex.component.css
+++ b/src/app/components/pokedex/pokedex.component.css
@@ -48,7 +48,17 @@
 .active{
     background-color: #2c4494;
 }
-
+.div-select{
+    background: #354880;
+    width: 5rem ;
+    height: 30px;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 15px;
+    color: #fff;
+    text-align: center;
+    margin: 1rem;
+    border-radius: 5px;
+}
  /* animações */
 .card-img-top:hover{
     -webkit-animation-name: bounce;
@@ -207,6 +217,9 @@
             transform: none;
             }
 } 
+
+
+
 
 
 
